Added translation framework post processing for feature data to be cleaned before being fed to model

--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,8 @@ ENV/
 .ipynb_checkpoints/
 
 # Data
+/data/
 dataset (1).zip
-/data/raw/
-/data/interim/
-/data/processed/
-/data/cache/
 /models/
 /assets/
 
