--- a/requirements.txt
+++ b/requirements.txt
@@ -11,14 +11,17 @@ scikit-learn==1.5.2
 scipy==1.13.1
 
 # NLP & Audio
-transformers==4.43.3
+transformers==4.45.0
 datasets==2.19.1
-torch==2.3.1
+torch>=2.4.0
+torchvision>=0.19.0
 spacy==3.7.6
 librosa==0.10.2.post1
 pydub==0.25.1
 emoji==2.12.1
 sentence-transformers==3.0.1
+pyspellchecker==0.8.1
+autocorrect==2.6.1
 
 # Visualization & Dashboard
 plotly==5.23.0
